# tinyxml2

./: CMakeLists.txt  tinyxml2.cpp  tinyxml2.h
examples/: CMakeLists.txt
examples/IdNbr891/: CMakeLists.txt  main.cpp
examples/IdNbr891/build-MainApp-Qt6-Debug/: qtcsettings.cmake
src/: DynArray.h  MemPoolT.h  StrPair.cpp  StrPair.h  XMLDocument.cpp  XMLDocument.h  XMLUtil.cpp  XMLUtil.h  XmlNode.cpp  XmlNode.h
test/: CMakeLists.txt
test/bench/: CMakeLists.txt  StrPairBench.cpp
test/test/: CMakeLists.txt  DynArrayTest.cpp  StrPairTest.cpp  XMLUtilTest.cpp
